tests/ui/tail-typeck.stderr
error[E0308]: mismatched types
  --> $DIR/tail-typeck.rs:3:26
   |
LL | fn f() -> isize { return g(); }
   |           -----          ^^^ expected `isize`, found `usize`
   |           |
   |           expected `isize` because of return type
   |
note: the function g is defined here
  --> $DIR/tail-typeck.rs:5:1
   |
LL | fn g() -> usize { return 0; }
   | ^^^^^^^^^^^^^^^
help: you can convert a `usize` to an `isize` and panic if the converted value doesn't fit
   |
LL | fn f() -> isize { return g().try_into().unwrap(); }
   |                             ++++++++++++++++++++
help: consider changing g's return type
   |
LL | fn g() -> isize { return 0; }
   |           ~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
